--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A backend Project",
   "license": "ISC",
   "author": "Nilu Kumari",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev":"nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
